finished part II of Recipe_Box

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,4 +7,26 @@
         </li>
         <br>
     {% endfor %}
-</ul>    
+</ul>
+
+<a style="
+-webkit-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+background-color: #20e6e6;
+box-sizing: border-box;
+width: 100%;
+border: solid black 1px;"
+href="addauthor/">Add An Author</a>
+ 
+ <span style="padding-right: 30px;"></span>
+
+<a style="
+-webkit-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+background-color: #20e6e6;
+box-sizing: border-box;
+width: 100%;
+border: solid black 1px;"
+href="addrecipe/">Add An Recipe</a>
