--- a/templates/index.html
+++ b/templates/index.html
@@ -29,4 +29,4 @@ background-color: #20e6e6;
 box-sizing: border-box;
 width: 100%;
 border: solid black 1px;"
-href="addrecipe/">Add An Recipe</a>
+href="addrecipe/">Add A Recipe</a>
