--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 <h1>Recipe Box!</h1>
 
+{% if request.user.is_authenticated %}
+    <h3>Welcome, {{ request.user.author.name }}!</h3>
+{% endif %}
+
+<h4>Am I authenticated? {{ request.user.is_authenticated }}!</h4>
+
 <ul>
     {% for recipe in recipes %}
         <li>
@@ -16,10 +22,11 @@ box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
 background-color: #20e6e6;
 box-sizing: border-box;
 width: 100%;
-border: solid black 1px;"
+border: solid black 1px;
+border-radius: 3px;"
 href="addauthor/">Add An Author</a>
  
- <span style="padding-right: 30px;"></span>
+<span style="padding-right: 30px;"></span>
 
 <a style="
 -webkit-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
@@ -28,5 +35,32 @@ box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
 background-color: #20e6e6;
 box-sizing: border-box;
 width: 100%;
-border: solid black 1px;"
+border: solid black 1px;
+border-radius: 3px"
 href="addrecipe/">Add A Recipe</a>
+
+<span style="padding-right: 30px;"></span>
+
+<a style="
+-webkit-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+background-color: #20e6e6;
+box-sizing: border-box;
+width: 100%;
+border: solid black 1px;
+border-radius: 3px"
+href="logout/">LOGOUT</a>
+
+<span style="padding-right: 30px;"></span>
+
+<a style="
+-webkit-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+box-shadow: 14px -11px 22px 1px rgba(0,0,0,0.75);
+background-color: #20e6e6;
+box-sizing: border-box;
+width: 100%;
+border: solid black 1px;
+border-radius: 3px"
+href="login/">LOGIN</a>
